pages/components/TitlePage/titlepage.module.css
@import url('https://fonts.googleapis.com/css2?family=Paytone+One&display=swap');

.wrapper {
  display: flex;
  flex-direction: column;
  height: calc(100dvh - 6rem);
  justify-content: center;
  width: calc(100dvw - 2 * 2.5dvw - 2 * 1rem);
  padding: 0 calc(2.5dvw + 1rem);

}

.wrapper > img {
  position: absolute;
  width: 100%;
  height: 100dvh;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  object-fit: cover;
  z-index: -1;
  filter: opacity(0.3) blur(0.3rem);

}

.wrapper > h1 {
  font-size: 5rem;
  padding: 1rem;
  font-weight: bold;
  font-family: "Paytone One", monospace;
  overflow: hidden;
  text-overflow: ellipsis;
  color: var(--primary);
  background-color: var(--secondary);
  width: fit-content;
  box-shadow: 0 0 0.25rem 0.15rem var(--contrast-one);
  margin: 1rem; 
  
}

.wrapper > p {
  width: fit-content;
  margin: 0;
  padding: 1rem;
  z-index: 5;
}

@media (max-width: 740px) {
  .wrapper > h1 {
    font-size: 3rem;

  }
}

